Se eliminaron los links de las fuentes del html y se colocaron en el css con @import, se agregó el meta description y se agregó el preload.

--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap');
+
 :root {
     --dark-desaturated-blue-cardBackground: #1b1938;
     --slightly-transparent-white-mainParagraph: #ffffffbf;
